# tictactoe_cpp

./: CMakeLists.txt
include/: Agent.h  Board.h  Game.h
src/: Agent.cpp  Board.cpp  Game.cpp  main.cpp
tests/: test_Basic.cpp  test_Board.cpp
